--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.0",
+    "node-appwrite": "^15.0.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
