--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sentry/nextjs": "^9.29.0",
     "@types/query-string": "^6.2.0",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
